--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ input[type=text]{
   padding: 13px 12px;
   font-size: 15px;
   box-shadow: 0 1px 1px #DDD;
-  width: 384px;
+  width: 450px;
   outline: none;
   display: block;
   color: #788585;
@@ -59,6 +59,8 @@ ul {
   width: 420px;
   text-align: left;
 }
+
+
 ul li {
   display: block;
   padding: 15px 20px;
@@ -80,6 +82,14 @@ ul li:hover {
 }
 
 h1,h2,h3{
-  margin: 20px;
   color: #f9d094;
+  font-size: 420%;
+  margin: 0 0 0.1em;
+  text-align: center;
+  text-shadow:1px 1px 10px rgba(0, 0, 0, 0.25)
+}
+
+.button-cart{
+  display: flex;
+  justify-content: flex-end;
 }
