--- a/src/style/formula.css
+++ b/src/style/formula.css
@@ -1,13 +1,20 @@
 .FormulaCard  {
-    width: 100%;
-    height: 2cm;
-    border: 1px solid #aaa;
+    width: 97%;
+    height: 1cm;
+
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+    border-left: 1px solid rgba(255, 255, 255, 0.08);
+    border-right: 1px solid rgba(255, 255, 255, 0.08);
+    padding:2em 20px 0;
+
     display: flex;
     -webkit-flex: 1 1 0;
     -ms-flex: 1 1 0;
     flex: 1 1 0;
-    
-    background-color: #E0E0E0;
+    color: #f9d094;
+    background-color: #2e2a24;
+
 }
 
 .version, .is-latest, .name {
@@ -16,8 +23,5 @@
     -webkit-flex: 1 1 0;
     -ms-flex: 1 1 0;
     flex: 1 1 0;
-    
+
 }
-
-
-
