--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  position: relative;
+}
+
+.cart-button {
+  position: absolute;
+  top: 0;
+  right: 200px;
+  height: 50px;
+  width: 50px;
 }
 
 .App-logo {
@@ -11,7 +20,7 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-   background: #2e2a24;
+  background: #2e2a24;
 }
 
 .App-intro {
@@ -39,7 +48,7 @@ html {
 input[type=text]{
   text-align: center;
   font: inherit;
-  border: 6px solid #f9d094;;
+  border: 2px solid #f9d094;
   padding: 13px 12px;
   font-size: 15px;
   box-shadow: 0 1px 1px #DDD;
@@ -91,10 +100,10 @@ h1,h2,h3{
 
 }
 
-.cart-button{
+/* .cart-button{
   float:right;
-}
-
+} */
+/* 
 .modal{
   display: none;
   position: fixed;
@@ -120,10 +129,10 @@ h1,h2,h3{
   color: #ccc;
   float: right;
   font-size:30px;
-}
+} */
 
-.closeBtn:hover, .closeBtn:focus{
+/* .closeBtn:hover, .closeBtn:focus{
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
+} */
