--- a/src/style/formula.css
+++ b/src/style/formula.css
@@ -1,4 +1,4 @@
-.FormulaCard  {
+/* .FormulaCard  {
     width: 100%;
     height: 2cm;
     border: 1px solid #aaa;
@@ -18,6 +18,24 @@
     flex: 1 1 0;
     
 }
-
-
-
+ */
+ .item-wrap {
+    padding: 15px 20px;
+    background-color: #F8F8F8;
+    color: #788585;
+    margin-bottom: 3px;
+  
+    display: flex;
+    justify-content: space-between;
+  }
+  .item-name {
+    width: 50%;
+  }
+  .item-version {
+    width: 20%;
+  }
+  button {
+    background-color: #f9d094;
+    width: 50px;
+    height: 50px;
+  }
