--- a/src/style/packagesList.css
+++ b/src/style/packagesList.css
@@ -1,4 +1,4 @@
-.item-wrap {
+.col-name {
   padding: 15px 20px;
   background-color: #F8F8F8;
   color: #788585;
@@ -7,14 +7,15 @@
   display: flex;
   justify-content: space-between;
 }
+.nothing {
+  width: 50px;
+}
 .item-name {
   width: 50%;
 }
 .item-version {
   width: 20%;
 }
-button {
-  background-color: #f9d094;
-  width: 50px;
-  height: 50px;
+.col-name > * {
+  font-weight: bold;
 }
