--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
   width: 50px;
 }
 
+.installed-button {
+  position: absolute;
+  top: 0;
+  right: 100px;
+  height: 50px;
+  width: 50px;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
